<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/toolbarTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#47D1E3"
        android:fontFamily="@font/courgette"
        android:paddingTop="10dp"
        android:text="Home"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/baseline_home_24" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginBottom="45dp"
        android:layout_below="@id/toolbarTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="#138E9E"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/homeTextview"
            android:fontFamily="@font/courgette"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/homepageicon" />

        <TextView
            android:id="@+id/cartTextview"
            android:text="@string/cart"
            android:textStyle="bold"
            android:layout_width="140dp"
            android:fontFamily="@font/courgette"
            android:clickable="true"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/baseline_add_shopping_cart_24" />

        <TextView
            android:id="@+id/profileTextview"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="@font/courgette"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/baseline_account_circle_24" />
    </LinearLayout>

</RelativeLayout>